[package]
name = "libwinpalisade"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.59.0", features=["Win32_System","Win32_Security","Win32_System_SystemInformation","Win32_System_Com","Win32_Networking_BackgroundIntelligentTransferService","Win32_System_GroupPolicy"] }
windows-registry = "0.4.0"
windows-result = "0.3.0"

log = "0.4.0"